--- a/src/App.css
+++ b/src/App.css
@@ -14,25 +14,38 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #252323;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(116, 177, 143);
 }
 
-.App-link {
-  color: #61dafb;
+button {
+  padding-inline: 2em;
+  padding-block: 1em;
+  margin: 2em;
+}
+.button1 {
+  background-color: #61dafb;
+  border: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button2 {
+  background-color: aquamarine;
+  border: none;
+  cursor: pointer;
+}
+
+button:hover {
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.Auguri {
+  font-size: larger;
+  font-weight: 700;
 }
