--- a/src/App.css
+++ b/src/App.css
@@ -7,14 +7,8 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #252323;
+  background-color: gainsboro;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -32,11 +26,6 @@ button {
 .button1 {
   background-color: #61dafb;
   border: none;
-}
-
-.button2 {
-  background-color: aquamarine;
-  border: none;
   cursor: pointer;
 }
 
@@ -48,4 +37,10 @@ button:hover {
 .Auguri {
   font-size: larger;
   font-weight: 700;
+}
+
+.antiNatale {
+  list-style: none;
+  color: palevioletred;
+  text-align: justify;
 }
