--- a/src/App.css
+++ b/src/App.css
@@ -9,13 +9,6 @@
 
 .App-header {
   background-color: gainsboro;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: rgb(116, 177, 143);
 }
 
 button {
@@ -42,5 +35,27 @@ button:hover {
 .antiNatale {
   list-style: none;
   color: palevioletred;
-  text-align: justify;
+  text-align: center;
+}
+
+&::-webkit-scrollbar {
+  width: 12px; /* Larghezza della scrollbar per i browser WebKit (Chrome/Safari) */
+}
+
+&::-webkit-scrollbar-thumb {
+  background-color: #262d35; /* Colore della barra */
+  border-radius: 6px; /* Bordo arrotondato della barra */
+}
+
+&::-webkit-scrollbar-track {
+  background-color: #ffffff; /* Colore dello sfondo */
+}
+span {
+  font-style: italic;
+  font-size: smaller;
+}
+
+blockquote {
+  font-size: small;
+  font-style: italic;
 }
